# Conways_Game_of_Life

./: .gitignore  README.md  log.pstats  pyproject.toml
conways/: __init__.py  __main__.py
conways/logic/: __init__.py  board.py  board_numpy.py  cell.py  util.py
conways/performance/: __init__.py  timer.py
conways/ui/: __init__.py  cli_ui.py  pygame_ui.py  ui_args.py
profiling/: log.pstats
